# hruby

./: .gitignore  .travis.yml  README.md  Setup.hs  default.nix  hruby.cabal
Foreign/: Ruby.hs
Foreign/Ruby/: Bindings.hsc  Data.hs  Helpers.hs  Safe.hs
cbits/: shim.c  shim.h
cbits1.8/: shim.c
cbits1.9/: shim.h
test/: roundtrip.hs  test.rb
