cabal-version:       >= 1.10
name:                hruby
version:             0.5.0.0
synopsis:            Embed a Ruby intepreter in your Haskell program !
description:         This works with Ruby 2.2+. Everything you need should be in Foreign.Ruby.Safe.
license:             BSD3
license-file:        LICENSE
author:              Simon Marechal
maintainer:          bartavelle@gmail.com
-- copyright:
category:            Language
build-type:          Custom
extra-source-files:  test/*.rb
Tested-With:         GHC == 8.8.1, GHC == 8.10.2, GHC == 9.0.1

custom-setup
  setup-depends: Cabal, base, process

source-repository head
  type: git
  location: git://github.com/bartavelle/hruby.git


library
  exposed-modules:      Foreign.Ruby, Foreign.Ruby.Bindings, Foreign.Ruby.Helpers, Foreign.Ruby.Safe
  ghc-options:          -Wall
  build-depends:        base >= 4.6 && < 5
                        , aeson                >= 2
                        , bytestring           >= 0.10.0.2
                        , text                 >= 0.11
                        , attoparsec           >= 0.11 && < 0.15
                        , vector               >= 0.10
                        , unordered-containers >= 0.2 && < 0.3
                        , stm                  >= 2.4 && < 2.6
                        , scientific           >= 0.2 && < 0.4
  c-sources:            cbits/shim.c
  install-includes:     cbits/shim.h
  include-dirs:         cbits
  pkgconfig-depends:    ruby
  default-language:     Haskell2010

Test-Suite test-roundtrip
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  build-depends:  base >= 4.6 && < 5,hruby,aeson,QuickCheck,text,attoparsec,vector
  main-is:        roundtrip.hs
  default-language:     Haskell2010
